@@ -1,23 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST hash-slinger-2.5.tar.gz 32200 SHA256 18bf3e97e5e7469328533a5e8cd0b8bdedcaa1e7a5a754b92d405578ebbd02a4 SHA512 8260f914b4afed7ed809939115bc5a8f547cc336cf553731864d79954611283507864b405dd8adc3056c175e261c1369f5fc73572369e8c0aaa71d01c118f169 WHIRLPOOL a2d6e9e03b2067b117a1d9ace34643c0d8644b7d86920c79c7dcfbfa4629c2d58ce951b74b0876a678797a20453526935d2d60e3d928078d5e686417bda802cf
+DIST hash-slinger-2.6.tar.gz 34864 SHA256 121143efea136958ad6a42cb0a8fa80d95b1e4fc45632019d8f07a534d6efab2 SHA512 1e5d67ed2ef8eae910927fbd7419928d87ba31a91ca43a1c163b05f725da96a50d30e1539c4c55a68a22f0e2c9a2f7c7101fbdcfb5fc903e87fe4c22e20f33af WHIRLPOOL 7ff36bad9db31e6d8769a525fc60691cb6af3bd6970b9bbf55d56f7e3c08a6a97a35fd1363dbed012239432b7dfd2594d616dc4d0a80ae47c82b724e17183f41
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJTkDvdXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0NEM5MDM0MjM5MkNDRUI1NUFEQjYyMTIy
-RjA0RTMxRjA3MjAxRTdEAAoJEC8E4x8HIB59O1wP/il6aNyYMdSEgHS0DYmrHovI
-Iux5p/KL3si5B0SlkNcb34pzzC+Lkb9XugO9+3fs3H5p2KUXxqDdCS9IIH/LhSFw
-77rxKxJqV1T1bKnYRO+hM+9obG8VG6GOemSMBw1JbrWMK6y3zUTBvWwlscbMB3SK
-OEshyGLGI2IpZTb1EqV+rcn673bfC8xKW4fo5ALRoO3yHmBTNcJs3vxCDvKpg4Q9
-BbwNCuDeO+NTsF+ax5Uu1MzizBXBhm14Q+7oV/+KcMHisty2hAzjjHJ3sKXoP9W9
-1ww28BHwU6gMhgWkUY82P0RGq1pET1RqQcX20r6IhE8me3PzqfvOFo48yJuRC/7V
-wjR5fOWvfu/alA6QaI8IP48bhqCM4X/AVFV1xIiVfp01b1EjGOAgjCKnlBhR7+A6
-qG0ESGt/atxRt/3PHOiiHCPO7HGaNsINuY1Yw3ToSfFmB+AgJ0kyEg2TmMauWevf
-eA1zwLAOmuBBx9cWFOyc3Z9JcyLKtlnRq4b3SFFah1gk0q1ugFS65fAd4baO5qiy
-nN4+bAqd7rCuEiQ50uBhkha9UTa7oDLLl0bA+31W4QcVzvC+E6Q1ehYBzZHbWmcT
-FY7pNH4bl1dVJv6deZ3w6UiBiALHnrZE//bxrOYCHf1aSVmbzin0Quo3ehEzPmWh
-CoVpdxCCGr5+xlaTV/h3
-=CuT8
+iQJ8BAEBCABmBQJUrQ0fXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAw
+MDAwMDAwMDAwMDAwMDAwAAoJEC8E4x8HIB596YwQAITWLKRjllewQ15b+J20XQ0R
+abIJM1PVV0aFIQqgGHebVL3xykEiGVaDEhShJTycc1w5HVFt6DBv/z5mYYfAI1c5
+TwWogc0xCfbX9eF6CHuT9zdEJAz24ePYhtfKP0HgtB02JMKHyNLmWXMcxGmPFHge
+x8XxAMzXzdWGgJ5ni+EZ6R+yj6Y/UTmgDfodGD0IkqXDDVNNmSEN+SRESBHsV3cd
+PgGyqsROQY5AKy8e04lROOsDGhL0KwwxEdlA0Gdide2M8YV7zhL1xMUNbdVqf9e+
+JQ6dhPCZXhyZHhctvdPNsLUI4a+tuFKE0U71rkNfjQVZDHuGY2uBJPkk382xy5W+
+ezZxjuHeP1qBMJEDSVSUGsnpMa9QF/Bd8AFfYL7/5T81eE7tnJpWftURXf0Kl7eJ
+Ut46OGZF0aS95GQ+eQ5rC5AuLqKBfPo+I6bzE3grbOz7z/mIOHJDdOlFYioi/Ueq
+0cVw5FNvg5dPp6O9rMxy8utwt4E55OzhCEI2nUZuLifOx428rrtOivJETNy1qNZi
+rL6jm/FgPKCZCaqPYQKu+fDUQ0wK+4gSnJuBpNT272xkym3wnRRvTfcaSmBicNjI
+GnAyZsDNChFcjsPr11Xym/hK3FZeWrwFzqh5v7QZAt4NGTS2udY1qAjseTNLpuNA
+Bw2yZGqmcyU0th0a5+h+
+=1JQH
 -----END PGP SIGNATURE-----
