@@ -1,4 +1,4 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
@@ -14,13 +14,14 @@ SRC_URI="http://people.redhat.com/pwouters/${PN}/${P}.tar.gz"
 LICENSE="GPL-2+"
 SLOT="0"
 KEYWORDS="~amd64"
-IUSE="+sshfp +gnupg"
+IUSE="+gnupg ipsec +sshfp"
 
 DEPEND=""
 RDEPEND="net-dns/unbound[python,$PYTHON_USEDEP]
 	dev-python/ipaddr[$PYTHON_USEDEP]
 	dev-python/m2crypto[$PYTHON_USEDEP]
 	gnupg? ( dev-python/python-gnupg[$PYTHON_USEDEP] )
+	ipsec? ( net-misc/libreswan )
 	sshfp? ( net-misc/openssh )"
 
 REQUIRED_USE="${PYTHON_REQUIRED_USE}"
@@ -30,6 +31,7 @@ src_install() {
 	progs=tlsa
 	use sshfp && progs="$progs sshfp"
 	use gnupg && progs="$progs openpgpkey"
+	use ipsec && progs="$progs ipsec"
 	for bin in $progs ; do
 		doman ${bin}.1
 		python_foreach_impl python_doscript ${bin}
